2008-10-11  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:
	* vala/valacreationmethod.vala:
	* vala/valainterfacewriter.vala:
	* vala/valaobjecttype.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valastruct.vala:
	* gobject/valaccodeinvocationexpressionbinding.vala:
	* gobject/valaccodemethodbinding.vala:
	* gobject/valagidlwriter.vala:

	Support chaining constructors using `base' and `this'

2008-10-11  Jürg Billeter  <j@bitron.ch>

	* vala/valacfgbuilder.vala:
	* vapi/cairo.vapi:

	Avoid conflicts between named constructors and other members

2008-10-11  Jürg Billeter  <j@bitron.ch>

	* vala/valacreationmethod.vala:
	* vala/valamethod.vala:
	* gobject/valaccodedynamicmethodbinding.vala:
	* gobject/valaccodemethodbinding.vala:

	Generate code for construct functions in preparation to support
	base constructor calls

2008-10-10  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodemethodbinding.vala:

	Remove duplicated code

2008-10-10  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodecreationmethodbinding.vala:
	* gobject/valaccodemethodbinding.vala:

	Lift restriction on statements in creation methods of GObjects
	in preparation to support more flexible construction scheme

2008-10-09  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala:
	* vapigen/valagidlparser.vala:
	* vapi/packages/gdk-2.0/:
	* vapi/packages/gtk+-2.0/:

	Fix GdkDestroyNotify and GtkDestroyNotify bindings,
	fixes bug 525687

	* vapi/gdk-2.0.vapi:
	* vapi/gtk+-2.0.vapi:

	Regenerated

2008-10-06  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Mark time_t as integer type

2008-10-04  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/packages/vte/vte.metadata:

	vte_terminal_fork_command arguments are nullable

	* vapi/vte.vapi: regenerated

2008-10-04  Ali Sabil  <ali.sabil@gmail.com>

	* vapi/glib-2.0.vapi:

	Add missing properties to the GScanner binding,
	patch by Johann Prieur

2008-10-03  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala: